[package]
name = "ServerRawler"
description = "A high performance Minecraft server crawler, written in Rust"
license-file = "LICENSE"
version = "0.2.1-dev"
authors = ["Cyberdolfi"]
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["json"] }
semver = "1"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0.147"
colored_text = "0.3.0"
uuid = { version = "1.19.0", features = ["v4"] }
rand = "0.9.2"
futures = "0.3.31"
base64 = "0.22.1"
image = "0.25.9"
sqlx = { version = "0.9.0-alpha.1", features = [ "runtime-tokio", "postgres", "macros", "json" ] }
dotenvy = "0.15.7"