[package]
name = "ServerRawler"
description = "A high performance Minecraft server crawler, written in Rust"
license-file = "LICENSE"
version = "0.6.2-dev"
authors = ["Cyberdolfi"]
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["json"] }
semver = "1.0.27"
clap = { version = "4.5.57", features = ["derive"] }
serde_json = "1.0.149"
colored_text = "0.3.0"
uuid = { version = "1.20.0", features = ["v4"] }
rand = "0.10.0"
futures = "0.3.31"
base64 = "0.22.1"
image = "0.25.9"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "macros", "json" ] }
toml = "1.0.3+spec-1.1.0"
url = "2.5.8"
poise = "0.6.1"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }